# sumcumprod_jax

./: CMakeLists.txt  README.md  pyproject.toml  setup.py  test_kepler.py  test_sumcumprod.py
.github/action/: entrypoint.sh
.github/workflows/: tests.yml
lib/: cpu_ops.cc  gpu_ops.cc  kepler.h  kernel_helpers.h  kernels.cc.cu  kernels.h  pybind11_kernel_helpers.h  sumcumprod.h
src/kepler_jax/: kepler_jax.py
src/sumcumprod_jax/: __init__.py  sumcumprod_jax.py
tests/: test_sumcumprod_jax.py
